--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Susanna Barasch</h1>
   <p>Classical Music Industry Professional</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://sbarascha.github.io/images/Susanna%20Barasch%20Logo.png" />
 </body>
  
 </html>
