--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
+<!DOCTYPE html>
+
 <html>
- 
+    <head>
+    <title>Susanna Barasch</title>
+    <link rel="stylesheet" href="stylesheet.css"
+    </head>
+
 <body>
-  <h1>Susanna Barasch</h1>
-  <p>Classical Music Industry Professional</p>
-  <img src="https://sbarascha.github.io/images/Susanna%20Barasch%20Logo.png" />
+    <div class="wallpaper">
+    <h2>Classical Music Industry Professional</h2> 
+
+
+  <div id="logo-image">  
+  <img src="https://sbarascha.github.io/susanna/sb-logo-transparent.png" meta-data="Susanna Barasch">
+  </div>
+ 
+
+  <div id="headshot-image">
+    <img src="https://sbarascha.github.io/images/Susanna%20Barasch%20Headshot.JPG">
+  </div>
+
+  <div class="homepage-bio">
+    <p>Susanna Barasch is an operatic soprano and classical music industry professional with experience with classical music events, artist management, community and educational outreach, and virtual and in-person festivals.
+    </p>
+</div>
+</div>
+
 </body>
  
 </html>
