--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <html>
     <head>
     <title>Susanna Barasch</title>
-    <link rel="stylesheet" href="stylesheet.css"
-    </head>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script:wght@700&family=Roboto:wght@500&display=swap'); </style>
+  </head>
 
 <body>
     <div class="wallpaper">
-    <h2>Classical Music Industry Professional</h2> 
-
 
   <div id="logo-image">  
-  <img src="https://sbarascha.github.io/susanna/sb-logo-transparent.png" meta-data="Susanna Barasch">
+  <img src="https://sbarascha.github.io/susanna/Images/sb-logo-transparent.png" meta-data="Susanna Barasch">
   </div>
  
+  <h2 class="subheading">Classical Music Industry Professional</h2> 
 
   <div id="headshot-image">
     <img src="https://sbarascha.github.io/images/Susanna%20Barasch%20Headshot.JPG">
@@ -24,6 +27,14 @@
     <p>Susanna Barasch is an operatic soprano and classical music industry professional with experience with classical music events, artist management, community and educational outreach, and virtual and in-person festivals.
     </p>
 </div>
+
+<div class="homepage-offerings">
+  <p>Ms. Barasch is avaialbe for the following types of services:</p>
+<ul>
+  <li>Artist Consultation</li>
+  <li>Event Consultation</li>
+  <li>Website Consultation</li>
+</ul></div>
 </div>
 
 </body>
