--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
     <title>SouSue</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://sbarascha.github.io/susanna/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
